<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotasActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/notas"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerMaterias"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMaterias">

        <TextView
            android:id="@+id/textNota1"
            android:layout_width="152dp"
            android:layout_height="44dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/nomenota1"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/numberNota1"
            android:layout_width="152dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:hint="0.0"
            android:inputType="numberDecimal"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/textNota2"
            android:layout_width="152dp"
            android:layout_height="44dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/nomenota2"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/numberNota2"
            android:layout_width="152dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:hint="0.0"
            android:inputType="numberDecimal"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TextView
            android:id="@+id/textNota3"
            android:layout_width="152dp"
            android:layout_height="44dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/nomenota3"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/numberNota3"
            android:layout_width="152dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:hint="0.0"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <TextView
            android:id="@+id/textNota4"
            android:layout_width="152dp"
            android:layout_height="44dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/nomenota4"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/numberNota4"
            android:layout_width="152dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:hint="0.0"
            android:inputType="numberDecimal"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/media"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textMediaCalc"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="0.0"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <Button
            android:id="@+id/buttonSalvarNota"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="Salvar" />

        <Button
            android:id="@+id/buttonCalcular"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Calcular" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>